Fixed: Columns are not responsive when using narrow or tight-fitting formats.
Added in line 520 at style.css the follow line styles:
.ctsc-column.ctsc-column-narrow, .ctsc-column.ctsc-column-fit { float:
none; width: auto; margin: 0;}

--- a/css/style.css
+++ b/css/style.css
@@ -517,6 +517,7 @@ body .ctsc-dark a:hover { color:#fff; }
 	
 	/* COLUMNS */
 	.ctsc-column { float:none; width:auto; margin:0; }
+	.ctsc-column.ctsc-column-narrow, .ctsc-column.ctsc-column-fit { float: none; width: auto; margin: 0;}
 	
 	/* TABBED CONTENT */
 	.ctsc-tablist .ctsc-tablist-nav { float:none; width:auto; margin:0; padding:0 5px; }
